exercise-14/log.txt
A.cpp: In function ‘int main()’:
A.cpp:47:10: error: no ‘operator++(int)’ declared for postfix ‘++’ [-fpermissive]
   47 |         a++;
      |         ~^~
A.cpp:51:10: error: no ‘operator--(int)’ declared for postfix ‘--’ [-fpermissive]
   51 |         a--;
      |         ~^~
